[gd_scene load_steps=23 format=2]

[ext_resource path="res://TheCovidWatcher/Scenes/Spawner/Spawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://TheCovidWatcher/Scenes/Sounds/Sounds.tscn" type="PackedScene" id=2]
[ext_resource path="res://TheCovidWatcher/Assets/Backgrounds/PNG/City4/Bright/City4.png" type="Texture" id=3]
[ext_resource path="res://TheCovidWatcher/Sounds/Bgm/Streets Full Track.ogg" type="AudioStream" id=4]
[ext_resource path="res://TheCovidWatcher/Scenes/Tutorial/Tutorial.tscn" type="PackedScene" id=5]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_idle.tres" type="Texture" id=6]
[ext_resource path="res://TheCovidWatcher/Fonts/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://TheCovidWatcher/Assets/Backgrounds/PNG/corner.png" type="Texture" id=8]
[ext_resource path="res://TheCovidWatcher/Scripts/Menu/GameUI.gd" type="Script" id=9]
[ext_resource path="res://TheCovidWatcher/Assets/Backgrounds/PNG/black.png" type="Texture" id=10]
[ext_resource path="res://TheCovidWatcher/Scripts/Menu/GameOver.gd" type="Script" id=11]

[sub_resource type="GDScript" id=1]
script/source = "extends CanvasLayer


func game_over() -> void:
	$GameUI.hide()
	$GameOver.show()


func _on_Spawner_game_over(final_score):
	$GameOver.set_final_score(final_score)
	game_over()
	
"

[sub_resource type="DynamicFont" id=2]
size = 36
use_mipmaps = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 72
outline_size = 3
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 66
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 66
font_data = ExtResource( 7 )

[sub_resource type="GDScript" id=9]
script/source = "extends Control


func _on_Resume_pressed():
	get_tree().paused = false
	hide()


func _on_Main_Menu_pressed():
	get_tree().paused = false
	get_tree().change_scene(\"res://TheCovidWatcher/Scenes/Menu/MainMenu.tscn\")


func _on_GameUI_pause():
	get_tree().paused = true
	show()
"

[sub_resource type="DynamicFont" id=10]
size = 66
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 66
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Spawner" parent="." instance=ExtResource( 1 )]
position = Vector2( -70, 480 )

[node name="Timer" type="Timer" parent="Spawner"]

[node name="Sounds" parent="." instance=ExtResource( 2 )]
music = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = SubResource( 1 )

[node name="GameUI" type="Control" parent="CanvasLayer"]
margin_right = 960.0
margin_bottom = 100.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeopleCaught" type="Sprite" parent="CanvasLayer/GameUI"]
position = Vector2( 40, 50 )
scale = Vector2( 10, 10 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer/GameUI/PeopleCaught"]
margin_left = 4.56392
margin_top = -2.30828
margin_right = 21.5639
margin_bottom = 18.6917
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLeft" type="TextureRect" parent="CanvasLayer/GameUI"]
margin_top = 480.0
margin_right = 60.0
margin_bottom = 540.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpperLeft" type="TextureRect" parent="CanvasLayer/GameUI"]
margin_top = 60.0
margin_right = 60.0
margin_bottom = 120.0
rect_scale = Vector2( 1, -1 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="TextureRect" parent="CanvasLayer/GameUI"]
margin_left = 960.0
margin_top = 480.0
margin_right = 1020.0
margin_bottom = 540.0
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpperRight" type="TextureRect" parent="CanvasLayer/GameUI"]
margin_left = 960.0
margin_top = 60.0
margin_right = 1020.0
margin_bottom = 120.0
rect_scale = Vector2( -1, -1 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="CanvasLayer/GameUI"]
margin_left = 463.0
margin_top = 30.0
margin_right = 497.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pausebutton" type="TextureButton" parent="CanvasLayer/GameUI"]
margin_left = 902.123
margin_top = 15.6566
margin_right = 942.123
margin_bottom = 55.6566
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/GameUI/Pausebutton"]
margin_right = 36.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 4 )
text = "| |"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_right = 600.0
margin_bottom = 270.0

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GameOver"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 480.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOver"]
margin_top = 30.0
margin_right = 960.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 5 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TYLabel" type="Label" parent="CanvasLayer/GameOver"]
margin_top = 80.0
margin_right = 960.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 6 )
text = "Terima kasih sudah bermain!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchLabel" type="Label" parent="CanvasLayer/GameOver"]
visible = false
margin_top = 450.0
margin_right = 960.0
margin_bottom = 489.0
custom_fonts/font = SubResource( 6 )
text = "Sentuh layar untuk melanjutkan"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/GameOver"]
position = Vector2( 480, 232 )
scale = Vector2( 15, 15 )
texture = ExtResource( 6 )

[node name="FinalScoreLabel" type="Label" parent="CanvasLayer/GameOver"]
margin_top = 300.0
margin_right = 960.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalLabel" type="Label" parent="CanvasLayer/GameOver"]
margin_top = 140.0
margin_right = 960.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 8 )
text = "Skor Akhir"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/GameOver"]
pause_mode = 2
wait_time = 2.0
one_shot = true

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/PauseMenu"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 480.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="CanvasLayer/PauseMenu"]
margin_left = 195.0
margin_top = 200.0
margin_right = 764.0
margin_bottom = 239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/Resume"]
margin_right = 569.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 10 )
text = "Lanjutkan Permainan"

[node name="Main Menu" type="TextureButton" parent="CanvasLayer/PauseMenu"]
margin_left = 319.0
margin_top = 300.0
margin_right = 640.0
margin_bottom = 339.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/Main Menu"]
margin_right = 321.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 11 )
text = "Menu Utama"
[connection signal="game_over" from="Spawner" to="CanvasLayer" method="_on_Spawner_game_over"]
[connection signal="people_caught" from="Spawner" to="CanvasLayer/GameUI" method="_on_Spawner_people_caught"]
[connection signal="update_timer" from="Spawner" to="CanvasLayer/GameUI" method="_on_Spawner_update_timer"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
[connection signal="pause" from="CanvasLayer/GameUI" to="CanvasLayer/PauseMenu" method="_on_GameUI_pause"]
[connection signal="pressed" from="CanvasLayer/GameUI/Pausebutton" to="CanvasLayer/GameUI" method="_on_Pausebutton_pressed"]
[connection signal="gui_input" from="CanvasLayer/GameOver" to="CanvasLayer/GameOver" method="_on_GameOver_gui_input"]
[connection signal="timeout" from="CanvasLayer/GameOver/Timer" to="CanvasLayer/GameOver" method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Resume" to="CanvasLayer/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Main Menu" to="CanvasLayer/PauseMenu" method="_on_Main_Menu_pressed"]
